<resources>
    <string name="app_name">TV Streams</string>
    <string name="title_activity_login">Sign in</string>
    <string name="app_subtitle">The easiest way to watch television on your Android devices</string>
    <string name="unexpected_error">An unknown error has occurred</string>
    <string name="login_error">An error occurred when signing in</string>
    <string name="title_activity_channels">Channels</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="you_have_no_channels">You have no channels</string>
    <string name="import_channels">You can import a list of channels using a m3u playlist</string>
    <string name="add_sample_playlist">Add Sample Playlist</string>
    <string name="action_delete">Delete</string>
    <string name="playlist">Playlist</string>
    <string name="link">Link</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title_activity_add">Add</string>
    <string name="valid_link">Please insert a valid link</string>
    <string name="attention">Attention</string>
    <string name="ok">Ok</string>
    <string name="action_logout">Logout</string>
    <string name="channel">Channel</string>
    <string name="name">Name</string>
    <string name="playlist_or_channel">Playlist or Channel</string>
    <string name="action_delete_all">Delete All</string>
    <string name="action_edit">Edit</string>
    <string name="title_activity_edit">Edit</string>
</resources>
