<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/text_view"
            android:visibility="gone"/>

    <LinearLayout
            android:padding="20dp"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:padding="20dp"
                android:textSize="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_have_no_channels"
                android:textAlignment="center"/>

        <TextView
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/import_channels"
                android:layout_centerInParent="true"
                android:textAlignment="center"/>

        <Button
                android:layout_margin="30dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/add_sample_playlist"/>
    </LinearLayout>
</RelativeLayout>