<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="12dp"
        tools:context=".AddPlaylistActivity">

    <TextView
            android:padding="20dp"
            android:text="@string/playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="54dp"
            tools:layout_editor_absoluteX="16dp"
            android:id="@+id/textView3"/>

    <EditText
            android:layout_gravity="center"
            android:padding="20dp"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="106dp"
            tools:layout_editor_absoluteX="34dp"
            android:id="@+id/textView2"
            android:inputType="textWebEditText"
            android:contentDescription="@string/link"
            android:hint="@string/link"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:autofillHints=""/>

    <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:layout_weight="1"
                android:padding="15dp"
                android:layout_margin="15dp"
                android:background="@color/red"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="192dp"
                tools:layout_editor_absoluteX="63dp"
                android:id="@+id/button3"/>

        <Button
                android:layout_weight="1"
                android:padding="15dp"
                android:layout_margin="15dp"
                android:background="@color/colorAccent"
                android:text="@string/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="192dp"
                tools:layout_editor_absoluteX="237dp"
                android:id="@+id/button2"/>

    </LinearLayout>


</LinearLayout>