<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="12dp"
        tools:context=".EditChannelActivity">

    <TextView
            android:padding="20dp"
            android:text="@string/channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="54dp"
            tools:layout_editor_absoluteX="16dp"/>

    <EditText
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:padding="20dp"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="106dp"
            tools:layout_editor_absoluteX="34dp"
            android:id="@+id/name_text"
            android:inputType="textWebEditText"
            android:contentDescription="@string/name"
            android:hint="@string/name"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:autofillHints=""/>

    <EditText
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:padding="20dp"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="106dp"
            tools:layout_editor_absoluteX="34dp"
            android:id="@+id/link_text"
            android:inputType="textWebEditText"
            android:contentDescription="@string/link"
            android:hint="@string/link"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:autofillHints=""/>

    <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:background="@drawable/negative_button"
                android:focusable="true"
                android:layout_weight="1"
                android:padding="15dp"
                android:layout_margin="15dp"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="192dp"
                tools:layout_editor_absoluteX="63dp"
                android:id="@+id/cancel"/>

        <Button
                android:visibility="visible"
                android:background="@drawable/button"
                android:focusable="true"
                android:layout_weight="1"
                android:padding="15dp"
                android:layout_margin="15dp"
                android:text="@string/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="192dp"
                tools:layout_editor_absoluteX="237dp"
                android:id="@+id/save"/>

        <ProgressBar
                android:visibility="gone"
                style="?android:attr/progressBarStyle"
                android:layout_weight="1"
                android:padding="15dp"
                android:layout_margin="15dp"
                android:layout_width="0dp"
                android:id="@+id/editChannelProgressBar"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>